--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" /> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
   </head>
   <body>
-    <load ="partials/header.html" />
+<form autocomplete="off" class="form js-form">
+  <input type="text" class="input js-input" name="request" placeholder="Search images...">
+  <button type="submit" class="form-button js-form-button">Search</button>
+</form>
+<span class="loader"></span>
+<ul class="list"></ul>
+<button type="button" class="btn btn-primary button" data-action="load-more">
+  <!-- Спінер -->
+  <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true">Loading images, please wait...</span>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+  <span class="label">Load more</span>
+</button>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+<script type="module" src="./main.js"></script>
   </body>
 </html>
