--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
   </head>
   <body>
+    <div class="container">
 <form autocomplete="off" class="form js-form">
   <input type="text" class="input js-input" name="request" placeholder="Search images...">
   <button type="submit" class="form-button js-form-button">Search</button>
@@ -21,7 +22,7 @@
 
   <span class="label">Load more</span>
 </button>
-
+</div>
 <script type="module" src="./main.js"></script>
   </body>
 </html>
