--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,14 @@
 </form>
 <span class="loader"></span>
 <ul class="list"></ul>
-<button type="button" class="btn btn-primary button" data-action="load-more">
-  <!-- Спінер -->
-  <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true">Loading images, please wait...</span>
 
-  <span class="label">Load more</span>
-</button>
+<div class="loader-wrapper">
+  <span class="textloader js-loader ">Loading images, please wait...</span>
+</div>
+<div class="btn-container">
+  <button type="button" class="btn is-hidden" data-action="load-more">
+    <span class="label-btn-primary">Load more</span>
+  </button>
 </div>
 <script type="module" src="./main.js"></script>
   </body>
