--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <ul class="list"></ul>
 
 <div class="loader-wrapper">
-  <span class="textloader js-loader ">Loading images, please wait...</span>
+  <span class="textloader js-loader is-hidden">Loading images, please wait...</span>
 </div>
 <div class="btn-container">
   <button type="button" class="btn is-hidden" data-action="load-more">
