--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <button type="submit" class="form-button js-form-button">Search</button>
 </form>
 <span class="loader"></span>
-<ul class="list"></ul>
+<ul class="gallery js-gallery"></ul>
 
 <div class="loader-wrapper">
   <span class="textloader js-loader is-hidden">Loading images, please wait...</span>
