--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,11 @@
     <button class="form-btn" type="submit">Search</button>
   </form>
 
+
   <ul class="gallery js-gallery"></ul>
 
   <div class="wrap-loader">
-    <span class="loader js-loader"></span>
+    <span class="loader js-loader">Loading images, please wait...</span>
   </div>
   <div class="btn-container">
     <button type="button" class="loadmore-btn" data-action="load-more">
